# hierarch

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  environment.yml  meta.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  python-publish.yml
Hierarch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
__pycache__/: internal_functions.np_all_axis1-98.py38.1.nbc  internal_functions.np_all_axis1-98.py38.nbi
docs/: conf.py  index.rst  requirements.txt
docs/_templates/: custom-class-template.rst
docs/reference/: index.rst  power.rst  resampling.rst  stats.rst
docs/reference/_autosummary/: hierarch.power.DataSimulator.rst  hierarch.power.rst  hierarch.resampling.Bootstrapper.rst  hierarch.resampling.Permuter.rst  hierarch.resampling.rst  hierarch.stats.ConvergenceWarning.rst  hierarch.stats.confidence_interval.rst  hierarch.stats.hierarchical_randomization.rst  hierarch.stats.hypothesis_test.rst  hierarch.stats.linear_regression_test.rst  hierarch.stats.multi_sample_test.rst  hierarch.stats.preprocess_data.rst  hierarch.stats.rst  hierarch.stats.studentized_covariance.rst  hierarch.stats.two_sample_test.rst  hierarch.stats.welch_statistic.rst
docs/user/: confidence.rst  hypothesis.rst  importing.rst  index.rst  overview.rst  power.rst  setup.rst  usage.rst
hierarch/: __init__.py  internal_functions.py  numba_overloads.py  pipeline.py  power.py  regression_utils.py  resampling.py  stats.py
tests/: test_internal_functions.py  test_pipeline.py  test_power.py  test_regression_utils.py  test_resampling.py  test_stats.py
