[tool.poetry]
name = "hierarch"
version = "1.2.0"
description = "Hierarchical hypothesis testing library"
authors = ["Rishi Kulkarni <rishi@kulkarni.science>"]
homepage = "https://github.com/rishi-kulkarni/hierarch"
license = "LICENSE.txt"
readme = "README.md"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
    ]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
numba = ">=0.61"
scipy = ">=1.10.0"
pandas = ">=1.5.3"

[tool.poetry.group.dev.dependencies]
black = ">=23.1,<25.0"
flake8 = ">=6,<8"
pytest = ">=7.2.1,<9.0.0"
sphinx = ">=6.1.3,<8.0.0"
numpydoc = "^1.5.0"
sphinx-rtd-theme = ">=1.2,<3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
