[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hierarch"
version = "1.2.1"
description = "Hierarchical hypothesis testing library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.15"
authors = [
    { name = "Rishi Kulkarni", email = "rishi@kulkarni.science" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0,<2.3",
    "numba>=0.63",
    "scipy>=1.13",
    "pandas>=2.3.3",
]

[project.urls]
Homepage = "https://github.com/rishi-kulkarni/hierarch"

[dependency-groups]
dev = [
    "black>=23.1,<27.0",
    "flake8>=6,<8",
    "pytest>=7.2.1,<9.0.0",
    {include-group = "docs"},
]
docs = [
    "sphinx>=6.1.3,<8.0.0",
    "numpydoc>=1.5.0,<2.0.0",
    "sphinx-rtd-theme>=1.2,<3.0",
]
