[metadata]
name = hierarch
version = 1.1.4
author = Rishi Kulkarni
author_email = rishi@kulkarni.science
url = https://github.com/rishi-kulkarni/hierarch
description = Hierarchical hypothesis testing library
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages=find:
install_requires=
    numpy>=1.20.2
    scipy>=1.6.2
    numba>=0.55.0
    pandas>=1.2.4
python_requires= >=3.7

[options.packages.find]
exclude = 
    tests

[flake8]
max-line-length = 100
ignore = E203 W503